--- a/ProyectoFablab/My Project/Resources.resx
+++ b/ProyectoFablab/My Project/Resources.resx
@@ -145,4 +145,7 @@
   <data name="StarBlueEyes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\StarBlueEyes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="add" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\add.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
