añadir, consultar y editar maquinas

--- a/ProyectoFablab/Interfaz/NuevaMaquina.resx
+++ b/ProyectoFablab/Interfaz/NuevaMaquina.resx
@@ -117,4 +117,32 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="ErrorProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAANcNAADXDQAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/lQCm/5IAHAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/5IAHP+VAMX/lQDT/5IAHAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/lQDI/5UA//+WAJsAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/5UAGP+UAJ7/lQD//5UAh/+A
+        AAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/5UAkf+V
+        AP//lQCfAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP+A
+        AAT/lQCr/5MAQP+VAIv/mQAKAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP+q
+        AAb/lABM/5QAcP+VAIv/lQD//5YAOAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP+U
+        AHr/lQDv/5UA//+VAPf/lwBC/5YAOAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/lQA8/5QAyf+U
+        AMn/lQBI/5QA1f+VAP//lACx/5UADAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/5QAyf+V
+        AP//lQD//5QAyf+VAH3/lgCK/4AAAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP+V
+        AP//lQD//5UA//+VAP//jgAJAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD/lQD//5UA//+VAP//lQD/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//wAB/5MAQP+U
+        AFj/lgC4/5UA//+VAP//lQD//5UA//+WALj/lABY/5QAWP+UAFj/lABY/5QAWP+TAED//wAB/5UAn/+V
+        AP//lQD//5UA//+VAP//lQD//5UA//+VAP//lQD//5UA//+VAP//lQD//5UA//+VAP//lQD//5UAn/+U
+        AOH/lgCs/5QAWP+VAHT/lQD//5UA//+VAP//lQD//5UAdP+UAFj/lABY/5QAWP+UAFj/lABY/5YArP+U
+        AOH/lQBb/5UA6P+VAP//lQD//5UA//+VAP//lQD//5UA//+VAP//lQD//5UA//+VAP//lQD//5UA//+V
+        AOj/lQBb/P8AAPw/AAD+PwAA/g8AAP+PAAD/gwAA/wMAAP4HAADwDwAA8B8AAPB/AADw/wAAAAAAAAAA
+        AAAAAAAAAAAAAA==
+</value>
+  </data>
 </root>
